--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ansi-regex": "^5.0.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
+    "follow-redirects": "^1.14.8",
     "glob-parent": "^5.1.2",
     "jquery": "^3.6.0",
     "node-forge": "^1.0.0",
@@ -18,6 +19,7 @@
     "popper.js": "^1.16.1",
     "postcss": "^8.2.13",
     "turbolinks": "^5.2.0",
+    "url-parse": "^1.5.6",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
